solved the text spacing issues

--- a/src/stylesheets/abilities-section.scss
+++ b/src/stylesheets/abilities-section.scss
@@ -63,6 +63,7 @@
   font-style: normal;
   font-weight: normal;
   font-size: 1vw;
+  width: 15vw;
 }
 
 #abilities-wrapper{
